Get rid of commons-io dependency